[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://Textures/background.tex" type="Texture" id=2]
[ext_resource path="res://Textures/logo.tex" type="Texture" id=3]
[ext_resource path="res://Textures/btn_start.tex" type="Texture" id=4]
[ext_resource path="res://Textures/btn_start_pressed.tex" type="Texture" id=5]
[ext_resource path="res://Textures/btn_instructions.tex" type="Texture" id=6]
[ext_resource path="res://Textures/btn_instructions_pressed.tex" type="Texture" id=7]
[ext_resource path="res://Fonts/aero_70.fnt" type="BitmapFont" id=8]

[sub_resource type="Animation" id=1]

resource/name = "Base"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

resource/name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("animation_container:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.4, 0.9 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( -1138, 2 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("animation_container:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.4, 0.9 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "outro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("animation_container:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -1138, 2 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("animation_container:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 5.96046e-08, 0.5 ), "transitions":FloatArray( -4, -4 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0.6 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"go_to_next_scene" } ] }

[node name="title_screen" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="animation_container" type="Node2D" parent="."]

__meta__ = { "_edit_group_":true }

[node name="logo" type="TextureFrame" parent="animation_container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 180.0
margin/right = 1018.0
margin/bottom = 449.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="btn_start" type="TextureButton" parent="animation_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 1536.0
margin/right = 906.0
margin/bottom = 1731.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )

[node name="btn_instructions" type="TextureButton" parent="animation_container"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 1530.0
margin/right = 906.0
margin/bottom = 1727.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )

[node name="lbl_highscore" type="Label" parent="animation_container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 460.0
margin/right = 1076.0
margin/bottom = 585.0
custom_fonts/font = ExtResource( 8 )
text = "Highscore: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Base = SubResource( 1 )
anims/intro = SubResource( 2 )
anims/outro = SubResource( 3 )
next/intro = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "intro"

[connection signal="pressed" from="animation_container/btn_start" to="." method="_on_btn_start_pressed"]

[connection signal="pressed" from="animation_container/btn_instructions" to="." method="_on_btn_instructions_pressed"]


